test/visibility/only/onlyModuleItself.good
onlyModuleItself.chpl:6: In function 'main':
onlyModuleItself.chpl:7: error: Bad identifier in 'only' clause, no known 'Toolbox' defined in 'Toolbox'
